--- a/kalkulator.html
+++ b/kalkulator.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,49 +11,29 @@
 </head>
 
 <body>
-    <main>
-        <section class="calculator">
-            <div id="calculator__wrapper">
-                <div id="previous__result"></div>
-                <div id="result"></div>
-                <div class="row">
-                    <div class="column">
-                        <button class="number" id="n7">7</button>
-                        <button class="number" id="n8">8</button>
-                        <button class="number" id="n9">9</button>                                               
-                        <button class="operator" id="reset">C</button>
-                        <button class="operator" id="backspace">CE</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <button class="number" id="n4">4</button>
-                        <button class="number" id="n5">5</button>
-                        <button class="number" id="n6">6</button>
-                        <button class="operator" id="minus">-</button>
-                        <button class="operator" id="multiply">x</button>                     
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <button class="number" id="n1">1</button>
-                        <button class="number" id="2">2</button>
-                        <button class="number" id="3">3</button>
-                        <button class="operator" id="+">+</button>
-                        <button class="operator" id="division">/</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <button class="number" id="n0">0</button>
-                        <button id="point">.</button>
-                        <div class="empty">0</div>
-                        <button class="operator" id="answer">=</button>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+    <section class="calculator">
+        <div id="calculator__wrapper">
+            <div id="result"></div>
+            <button class="number" id="n7">7</button>
+            <button class="number" id="n8">8</button>
+            <button class="number" id="n9">9</button>
+            <button class="operator" id="reset">C</button>
+            <button class="operator" id="backspace">CE</button>
+            <button class="number" id="n4">4</button>
+            <button class="number" id="n5">5</button>
+            <button class="number" id="n6">6</button>
+            <button class="operator" id="minus">&#8722;</button>
+            <button class="operator" id="multiply">&#215;</button>
+            <button class="number" id="n1">1</button>
+            <button class="number" id="n2">2</button>
+            <button class="number" id="n3">3</button>
+            <button class="operator" id="plus">&#43;</button>
+            <button class="operator" id="division">&#247;</button>
+            <button class="number" id="n0">0</button>
+            <button id="point">.</button>
+            <button class="operator" id="equal">&#61;</button>
+        </div>
+    </section>
     <script src="kalkulator.js"></script>
 </body>
 
